--- a/MobileRecruitTest/app/src/main/res/layout/fragment_trasactions.xml
+++ b/MobileRecruitTest/app/src/main/res/layout/fragment_trasactions.xml
@@ -1,13 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/constraintLayout"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".TransactionsFragment">
 
   <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/recyclerview_transactions"
       android:layout_width="match_parent"
       android:layout_height="match_parent">
   </androidx.recyclerview.widget.RecyclerView>
+
+  <ProgressBar
+      android:id="@+id/progress_bar"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintLeft_toLeftOf="parent"
+      app:layout_constraintLeft_toRightOf="parent"
+      app:layout_constraintTop_toTopOf="parent"></ProgressBar>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
